--- a/main/mid_section.css
+++ b/main/mid_section.css
@@ -1,4 +1,8 @@
-.row_1{
+body {
+    font-size: 16px;
+}
+
+.row_1 {
     --height-limit:50%;
 }
 
@@ -29,8 +33,21 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position-x: center;
     /* background-position: center, center; */
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition:all 1s ease-in-out;
+    -moz-transition:all 1s ease-in-out;
+    -ms-transition:all 1s ease-in-out;
+    -o-transition:all 1s ease-in-out;
+    transition:all 1s ease-in-out;
+}
+
+.selected {
+    visibility: visible;
+    opacity: 1;
 }
 
 @media (max-width: 710px) {
@@ -42,6 +59,12 @@
     }
 }
 
+@media (max-width: 420px) and (min-height:700px) {
+    .row_1 {
+        --height-limit:40%;
+    }
+}
+
 #pano_1 {
     background-image: url(//media.univcomm.cornell.edu/photos/1280x720/5018BF03-EAE5-C00A-E0B6BEC8175989E1.jpg);
     z-index: 2;
@@ -50,6 +73,11 @@
 #pano_2 {
     background-image: url(https://images.unsplash.com/photo-1487958449943-2429e8be8625?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
     z-index: 3;
+}
+
+#pano_3 {
+    background-image: url(https://sm.pcmag.com/t/pcmag_ap/review/n/notion/notion_6mzn.1920.jpg);
+    z-index: 4;
 }
 
 .slider_overlay {
@@ -78,41 +106,50 @@
     list-style: none;
 }
 
-#show_innertxt {
+.show_innertxt {
     display: inline;
     position: absolute;
     width: 60%;
-    min-width: 220px;
+    min-width: 30%;
+    height: max-content;
+    max-height: 55%;
     top: calc(30% + 1vw);
     color: #FFF;
     background-color: rgba(100, 117, 153, 0.65);
     -webkit-transition: 0.25s ease-in-out all;
-    font-size: 2em;
-    font-weight:bold;
+    font-size: 1.5rem; /*target 24px / context body 16px */
+    font-weight: bold;
+    overflow-y: hidden;
+    line-break: auto;
     padding-left: 10px;
+    margin-left:2%;
     line-height:1.8;
 }
 
-@media (min-width: 711px) {
-    #three_nav {
-        top: calc(80% + 2vw);
+@media (min-width: 712px) {
+    .slide_block{
+        background-position-y: -50px;
     }
 
-    #show_innertxt {
+    #three_nav {
+        top: calc(76.8% + 2vw);
+    }
+
+    .show_innertxt {
         width: 50%;
         top: calc(20% + 1vw);
     }
 }
 
 @media (min-width: 972px) {
-    #show_innertxt {
+    .show_innertxt {
         width: 40%;
         left: 5%;
     }
 }
 
 @media (min-width: 1122px) {
-    #show_innertxt {
+    .show_innertxt {
         width: 30%;
     }
 }
@@ -131,5 +168,19 @@
     background-color: #000;
     color: #fff;
     margin: 0 12px 0 0;
-    margin-top: var(--height-limit);
+    -webkit-transition:all 0.3s ease-in-out;
+    -moz-transition:all 0.3s ease-in-out;
+    -ms-transition:all 0.3s ease-in-out;
+    -o-transition:all 0.3s ease-in-out;
+    transition:all 0.3s ease-in-out;
+}
+
+input[type="radio"]:checked+label{
+    opacity: 1;
+    background-color: darkkhaki;
+    -webkit-transform: scale(1.15);
+    -moz-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    -o-transform: scale(1.15);
+    transform: scale(1.15);
 }
